# cuda-ipc-transport

./: README.md  pyproject.toml
cuda_ipc_transport/: __init__.py  __main__.py  channel.py  harness.py  protocol.py  receiver.py  sender.py  wrapper.py
cuda_ipc_transport/sources/: base.py  camera.py  file.py  test_pattern.py
cuda_ipc_transport/td/: exporter.py  importer.py
docs/handoff/: 2026-04-08-cuda-ipc-phase2-status.md  2026-04-08-phase3-osc-control-session.md
docs/plans/: 2026-04-05-cuda-ipc-transport.md  2026-04-07-phase2-sd-connection.md  2026-04-07-td-ml-bridge-asset.md  2026-04-08-phase3-sd-control-monitoring.md
docs/specs/: 2026-04-07-td-ml-bridge-asset.md  2026-04-08-phase3-sd-control-monitoring.md
scripts/: td_setup.py  test_smoke.py
td/: ipc_telemetry_code.py  sd_config_ml.json  sd_parexec_code.py
tests/: test_channel.py  test_harness_args.py  test_importer.py  test_integration.py  test_osc_status.py  test_protocol.py  test_receiver_compat.py  test_sources.py
