[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_ipc_transport"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "opencv-python"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cuda_ipc_transport*"]

[tool.pytest.ini_options]
addopts = "-m 'not cuda' --ignore=tests/test_integration.py"
markers = [
    "cuda: mark test as requiring CUDA GPU (skip if not available)",
]
